# email-notion

./: .gitignore  README.md  cdk.json  package-lock.json  package.json  sample.env
lambda/: Makefile
lambda/crates/assign-task/: Cargo.toml
lambda/crates/assign-task/src/: main.rs
lambda/crates/email-notion/: Cargo.toml
lambda/crates/email-notion/src/: email.rs  lib.rs  notion.rs
lib/: email-notion-stack.ts
test/: email-notion.test.ts
