[package]
name = "assign-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.6.0"
aws-config = "0.7.0"
aws-sdk-s3 = "0.7.0"
lambda_runtime = "0.5.0"
log = "0.4.14"
mailparse = "0.13.8"
once_cell = "1.9.0"
reqwest = {version = "0.11.9", default-features = false, features = ["rustls-tls"]}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
simple_logger = "2.1.0"
tokio = "1.17.0"